# RogPerfTuner

./: .clang-format  .gitignore  .gitmodules  .prettierrc.yaml  .pylintrc  CMakeLists.txt  CMakeLists.txt.bk  Dockerfile  Makefile  Makefile.bk  PKGBUILD  README.md  RogControlCenter.desktop  bug-report.sh  changelog.md  changelog.yaml  dev-app-update.yml  dev-mode.sh  electron-builder.yml  electron.vite.config.ts  ess  launchDebug.sh  main.py  main.spec  massif.out.25605  massif.out.26161  massif.out.26408  node  nohup.out  out.yml  package.json  perf  perf.data  pnpm-lock.yaml  pyproject.toml  remSubmodule.sh  test.py  tsconfig.node.json  tsconfig.web.json
Framework/: CMakeLists.txt
Framework/include/: enum_utils.hpp  framework_constants.hpp  serialize_utils.hpp  single_instance.hpp
Framework/include/abstracts/: loggable.hpp
Framework/include/clients/: notifications_client.hpp
Framework/include/configuration/: configuration.hpp
Framework/include/events/: event_bus.hpp
Framework/include/gui/: toaster.hpp
Framework/include/logger/: logger.hpp  logger_provider.hpp
Framework/include/models/: cpu_usage.hpp  logger_level.hpp
Framework/include/shell/: shell.hpp
Framework/include/translator/: translator.hpp
Framework/include/utils/: file_utils.hpp  process_utils.hpp  serialize_utils.hpp  time_utils.hpp
Framework/src/: file_utils.cpp  net_utils.cpp  process_utils.cpp  single_instance.cpp  string_utils.cpp  time_utils.cpp
Framework/src/clients/: abstract_cmd_client.cpp  abstract_dbus_client.cpp  abstract_file_client.cpp  abstract_unix_socket_client.cpp  notifications_client.cpp
Framework/src/events/: event_bus.cpp
Framework/src/gui/: no_scroll_combo_box.cpp  toaster.cpp
Framework/src/logger/: logger.cpp  logger_level.cpp  logger_provider.cpp
Framework/src/shell/: shell.cpp
Framework/src/translator/: translator.cpp
Framework/src/utils/: file_utils.cpp  net_utils.cpp  process_utils.cpp  single_instance.cpp  string_utils.cpp  time_utils.cpp
RccCommons/: CMakeLists.txt  Makefile
RccCommons/include/: RccCommons.hpp
RccCommons/include/logger/: logger.hpp  logger_provider.hpp
RccCommons/include/models/: command_result.hpp  steam_game_config.hpp
RccCommons/include/shell/: shell.hpp
RccCommons/include/utils/: constants.hpp  file_utils.hpp  string_utils.hpp
RccCommons/src/logger/: logger_provider.cpp
RccCommons/src/shell/: shell.cpp
RccCore/: CMakeLists.txt  Makefile
RccCore/include/configuration/: configuration.hpp
RccCore/include/events/: event_bus.hpp  events.hpp
RccCore/include/gui/: game_list.hpp  main_window.hpp  password_dialog.hpp  toaster.hpp  tray_icon.hpp
RccCore/include/logger/: logger.hpp  logger_provider.hpp
RccCore/include/models/: performance_profile.hpp  semantic_version.hpp  settings.hpp  websocket_message.hpp
RccCore/include/services/: application_service.hpp  hardware_service.hpp  open_rgb_service.hpp  profile_service.hpp  steam_service.hpp
RccCore/include/shell/: shell.hpp
RccCore/include/translator/: translations.hpp  translator.hpp
RccCore/include/utils/: autoupdater.hpp  debouncer.hpp  event_bus.hpp  events.hpp  file_utils.hpp  gui_utils.hpp  net_utils.hpp  profile_utils.hpp  single_instance.hpp  string_utils.hpp
RccCore/src/: main.cpp
RccCore/src/configuration/: configuration.cpp
RccCore/src/events/: event_bus.cpp
RccCore/src/gui/: game_list.cpp  main_window.cpp  password_dialog.cpp  toaster.cpp  tray_icon.cpp
RccCore/src/logger/: logger_provider.cpp
RccCore/src/services/: application_service.cpp  hardware_service.cpp  open_rgb_service.cpp  profile_service.cpp  steam_service.cpp
RccCore/src/translator/: translations.cpp  translator.cpp
RccScripts/: CMakeLists.txt
RccScripts/src/performance/: next_profile.cpp
RccScripts/src/rgb/: decrease_brightness.cpp  increase_brightness.cpp  next_effect.cpp
RccScripts/src/steam/: flatpak.cpp  run.cpp
RogControlCenter/: CMakeLists.txt
RogControlCenter/include/configuration/: configuration.hpp
RogControlCenter/include/events/: event_bus.hpp
RogControlCenter/include/gui/: fan_curve_editor.hpp  fan_curve_view.hpp  game_config_dialog.hpp  main_window.hpp  no_scroll_combo_box.hpp  password_dialog.hpp  toaster.hpp  tray_icon.hpp
RogControlCenter/include/logger/: logger.hpp  logger_provider.hpp
RogControlCenter/include/servers/: socket_server.hpp
RogControlCenter/include/services/: application_service.hpp  hardware_service.hpp  open_rgb_service.hpp  performance_service.hpp  profile_service.hpp  steam_service.hpp
RogControlCenter/include/shell/: shell.hpp
RogControlCenter/include/translator/: translator.hpp
RogControlCenter/include/utils/: autoupdater.hpp  constants.hpp  debouncer.hpp  file_utils.hpp  gui_utils.hpp  net_utils.hpp  process_utils.hpp  profile_utils.hpp  single_instance.hpp  string_utils.hpp  time_utils.hpp
RogControlCenter/src/: main.cpp
RogControlCenter/src/configuration/: configuration.cpp
RogControlCenter/src/events/: event_bus.cpp
RogControlCenter/src/gui/: fan_curve_editor.cpp  fan_curve_view.cpp  game_config_dialog.cpp  game_list.cpp  main_window.cpp  password_dialog.cpp  tray_icon.cpp  yes_no_dialog.cpp
RogControlCenter/src/logger/: logger.cpp  logger_provider.cpp
RogControlCenter/src/servers/: socket_server.cpp
RogControlCenter/src/services/: application_service.cpp  hardware_service.cpp  open_rgb_service.cpp  performance_service.cpp  profile_service.cpp  steam_service.cpp
RogControlCenter/src/shell/: shell.cpp
RogControlCenter/src/translator/: translations.cpp  translator.cpp
RogControlCenter/src/utils/: autoupdater.cpp  constants.cpp  file_utils.cpp  net_utils.cpp  process_utils.cpp  single_instance.cpp  string_utils.cpp  time_utils.cpp
RogPerfTuner/: CMakeLists.txt  Makefile
RogPerfTuner/include/configuration/: configuration.hpp
RogPerfTuner/include/events/: event_bus.hpp
RogPerfTuner/src/: main.cpp
commons/: CMakeLists.txt  cmake_install.cmake
commons/include/: RccCommons.hpp
core/: CMakeLists.txt  cmake_install.cmake
core/src/: main.cpp  test.cpp
core/src/gui/: toaster.cpp  (+2 more)
(+1445 files in other folders)
