[project]
name = "RogControlCenter"
version = "3.2.2"
description = "An utility to manage Asus Rog laptop performance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "keyring==25.6.0",
    "psutil==7.0.0",
    "PyQt5==5.15.11",
    "pyudev==0.24.3",
    "pyyaml==6.0.2",
    "qasync==0.27.1",
    "setproctitle==1.3.5",
    "toml>=0.10.2",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyinstaller>=6.12.0",
    "pylint>=3.3.6",
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]
